--- a/advapp/static/style.css
+++ b/advapp/static/style.css
@@ -36,7 +36,7 @@ header{
     background-color: rgb(44, 76, 129);
     
     margin:0;
-    padding:0;
+    padding:0%;
     font-size: medium;
     font-family: 'Lora', serif;
 
