--- a/advapp/templates/adventure/index.html
+++ b/advapp/templates/adventure/index.html
@@ -37,7 +37,7 @@
         
     </section>
     
-    <footer class="" style="position: absolute; bottom:0;">
+    <footer class="">
         
         <p>©2023 Event Registration System</p>
 
